ng2-admin/src/app/digitalstate/styles/_ngx-datatable.scss
.ngx-datatable {

  .datatable-header {

    .datatable-header-inner {
      height: 100%;

      .datatable-header-cell {
        padding: 0.5em 1em;
        height: 100%;

        .sort-btn {
          //position: absolute;
          //top: 0.25em;
          //right: 2em;
        }
        & > div {
          display: flex;
          flex: 1;
          height: 100%;

          .ds-datatable-header {
            .datatable-header-cell-label {
              font-weight: bold;
            }

            .column-filter {
              position: absolute;
              bottom: 0;
              left: 1em;
              right: 1em;
            }
          }
        }
      }
    }
  }

  .datatable-body-row {
    &.datatable-row-even {
      background-color: rgba(255,255,255,0.1);
    }

    .datatable-body-cell {
      display: flex;
      padding: 0.5em;

      .datatable-body-cell-label {
        align-self: center;
      }
    }
  }
}

